CSS dark theme change

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.5;
   color: var(--clr-fg);
   background-color: var(--clr-bg);
@@ -15,11 +15,11 @@
 }
 
 .dark {
-  --clr-bg: #23283e;
-  --clr-bg-alt: #2a2f4c;
-  --clr-fg: #bdbddd;
-  --clr-fg-alt: #cdcdff;
-  --clr-primary: #90a0d9;
+  --clr-bg: #102a43;
+  --clr-bg-alt: #256da5;
+  --clr-fg: #b7c7d7;
+  --clr-fg-alt: #a4c7e9;
+  --clr-primary: #2e79c2;
   --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
@@ -56,7 +56,7 @@ main {
 }
 
 .link::before {
-  content: '';
+  content: "";
   display: inline;
   width: 0%;
   height: 0.2em;
@@ -105,7 +105,7 @@ main {
 }
 
 .btn--outline:before {
-  content: '';
+  content: "";
   position: absolute;
   background-color: var(--clr-primary);
   right: 100%;
